[package]
name = "hybridserve_state_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zero-copy, no-unsafe reader/writer for the .hss hybrid inference-state container format."

[lib]
name = "hybridserve_state_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
